# Nexus

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  nexus.db-shm  nexus.db-wal  pyproject.toml
nexus/: __init__.py  config.py  main.py
nexus/agents/: __init__.py  base.py  briefing.py  project_context.py
nexus/agents/file_watcher/: __init__.py  agent.py  categories.py  extractors.py  handler.py  processor.py
nexus/agents/memory/: __init__.py  agent.py  context.py  entities.py  prompts.py
nexus/db/: __init__.py  database.py  lancedb_store.py  models.py  vectors.py
nexus/llm/: __init__.py  cascade.py  groq.py  ollama.py  provider.py
nexus/mcp/: __init__.py  __main__.py  server.py
nexus/tools/: __init__.py  embeddings.py  notifications.py
scripts/: nexus-context.sh  start.ps1
tests/: conftest.py  test_base_agent.py  test_briefing.py  test_config.py  test_database.py  test_embeddings.py  test_hybrid_search.py  test_llm_providers.py  test_project_context.py
tests/test_file_watcher/: test_file_watcher.py
tests/test_mcp/: test_mcp_tools.py
tests/test_memory/: test_memory.py
